Fixed buttons on mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,7 +125,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #935d8c;
+		background-color: #0f2027;
 		/* background-color: #2D3D4C; */
 		color: rgba(255, 255, 255, 0.65);
 	}
@@ -2595,6 +2595,7 @@ input, select, textarea {
 
 					ul.actions:not(.fixed) li > * {
 						width: 100%;
+						max-width: 72px;
 					}
 
 					ul.actions:not(.fixed) li:first-child {
@@ -3792,6 +3793,15 @@ input, select, textarea {
 /* Personal */
 	.flex {
 		display: flex;
+	}
+
+	.subheader {
+		margin-bottom: 2em;
+	}
+
+	.subheader span {
+		font-size: 1.25em;
+		letter-spacing: -0.025em;
 	}
 
 	.nav-icon:nth-of-type(1), .nav-icon:nth-of-type(2) {
